plugins/kotlin/idea/tests/testData/multiplatform/chainedTypeAliasRefinement/jvm/jvm.kt
actual typealias <!LINE_MARKER("descr='Has declaration in common module'")!>JvmJs<!> = Long

fun jvmTest(arg: Common) {
    takeCommon(arg)
}